--- a/Booking/src/app/views/flights/list/components/flight-card4/flight-card4.component.html
+++ b/Booking/src/app/views/flights/list/components/flight-card4/flight-card4.component.html
@@ -27,10 +27,10 @@
     <div class="d-md-flex justify-content-md-between">
       <div class="d-flex align-items-center mb-2 mb-md-0">
         <img src="assets/images/element/vip.png" class="w-30px me-2" alt="" />
-        <h6 class="fw-normal mb-0">Folio Airline (CCE - 2158)</h6>
+        <h6 class="fw-normal mb-0">VIP Transport (CCE - 2158)</h6>
       </div>
       <h6 class="fw-normal mb-0">
-        <span class="text-body">Travel Class:</span> Economy
+        <span class="text-body">Catégorie :</span> Standard
       </h6>
     </div>
   </div>
@@ -40,13 +40,13 @@
       <div class="col-md-9">
         <div class="row g-4">
           <div class="col-sm-4">
-            <h4>14:50</h4>
-            <h6 class="mb-0 fw-normal">Sun, 29 Jan {{ currentYear }}</h6>
-            <p class="mb-0">BOM - Terminal 2 Mumbai, India</p>
+            <h4>06:00</h4>
+            <h6 class="mb-0 fw-normal">Ven, 18 Oct {{ currentYear }}</h6>
+            <p class="mb-0">Bouaké - Côte d'Ivoire</p>
           </div>
 
           <div class="col-sm-4 my-sm-auto text-center">
-            <h5>9hr 50min</h5>
+            <h5>6h</h5>
             <div class="position-relative my-4">
               <hr class="bg-primary opacity-5 position-relative" />
 
@@ -60,8 +60,8 @@
 
           <div class="col-sm-4">
             <h4>07:35</h4>
-            <h6 class="mb-0 fw-normal">Sun, 30 Jan {{ currentYear }}</h6>
-            <p class="mb-0">JFK - Terminal 2 New York, USA</p>
+            <h6 class="mb-0 fw-normal">Ven, 18 Oct {{ currentYear }}</h6>
+            <p class="mb-0">Yopougon - Côte d'Ivoire</p>
           </div>
         </div>
 
@@ -70,12 +70,12 @@
         <div class="row g-4">
           <div class="col-sm-4">
             <h4>04:50</h4>
-            <h6 class="mb-0 fw-normal">Sun, 19 Feb {{ currentYear }}</h6>
-            <p class="mb-0">JFK - Terminal 2 New York, USA</p>
+            <h6 class="mb-0 fw-normal">Jeu, 24 Oct {{ currentYear }}</h6>
+            <p class="mb-0">Yopougon - Côte d'Ivoire</p>
           </div>
 
           <div class="col-sm-4 my-sm-auto text-center">
-            <h5>10hr 35min</h5>
+            <h5>6h</h5>
             <div class="position-relative my-4">
               <hr class="bg-primary opacity-5 position-relative" />
 
