--- a/Booking/src/app/views/flights/list/components/flight-card2/flight-card2.component.html
+++ b/Booking/src/app/views/flights/list/components/flight-card2/flight-card2.component.html
@@ -7,39 +7,39 @@
       <h6 class="fw-normal mb-0">AVS (FFR - 5682)</h6>
     </div>
     <h6 class="fw-normal mb-0">
-      <span class="text-body">Travel Class:</span> Economy
+      <span class="text-body">Catégorie :</span> Express
     </h6>
   </div>
 
   <div class="card-body p-4 pb-0">
     <div class="row g-4">
       <div class="col-sm-4 col-md-3">
-        <h4>14:50</h4>
-        <p class="mb-0">BOM - Terminal 2 Mumbai, India</p>
+        <h4>09:50</h4>
+        <p class="mb-0">Adjamé - Côte d'Ivoire</p>
       </div>
 
       <div class="col-sm-4 col-md-3 my-sm-auto text-center">
-        <h5>9hr 50min</h5>
+        <h5>3h</h5>
         <div class="position-relative my-4">
           <hr class="bg-primary opacity-5 position-relative" />
 
           <div
             class="icon-md bg-primary text-white rounded-circle position-absolute top-50 start-50 translate-middle"
           >
-            <i class="fa-solid fa-fw fa-plane rtl-flip"></i>
+            <i class="fa-solid fa-bus rtl-flip"></i>
           </div>
         </div>
       </div>
 
       <div class="col-sm-4 col-md-3">
-        <h4>07:35</h4>
-        <p class="mb-0">JFK - Terminal 2 New York, USA</p>
+        <h4>12:50</h4>
+        <p class="mb-0">Yamoussoukro - Côte d'Ivoire</p>
       </div>
 
       <div class="col-md-3 text-md-end">
-        <h4>{{ currencyType }}18,500</h4>
+        <h4>4000 {{ currencyType }}</h4>
         <a routerLink="/flights/detail" class="btn btn-dark mb-0 mb-sm-2"
-          >Book Now</a
+          >Réserver</a
         >
         <button
           class="btn btn-link text-decoration-underline p-0 mb-0 ms-1"
@@ -47,7 +47,7 @@
           data-bs-toggle="modal"
           data-bs-target="#flightdetail"
         >
-          <i class="bi bi-eye-fill me-1"></i>Flight Details
+          <i class="bi bi-eye-fill me-1"></i>Voir détails
         </button>
       </div>
     </div>
@@ -57,8 +57,7 @@
     <ul
       class="list-inline bg-light rounded-2 d-sm-flex text-center justify-content-sm-between mb-0 px-4 py-2"
     >
-      <li class="list-inline-item text-danger">Only 10 Seat Left</li>
-      <li class="list-inline-item text-danger">Non-Refundable</li>
+      <li class="list-inline-item text-danger">7 Places restantes</li>
     </ul>
   </div>
 </div>
