--- a/Booking/src/app/views/flights/list/components/flight-card4/flight-card4.component.html
+++ b/Booking/src/app/views/flights/list/components/flight-card4/flight-card4.component.html
@@ -53,13 +53,13 @@
               <div
                 class="icon-md bg-primary text-white rounded-circle position-absolute top-50 start-50 translate-middle"
               >
-                <i class="fa-solid fa-fw fa-plane rtl-flip"></i>
+                <i class="fa-solid fa-bus rtl-flip"></i>
               </div>
             </div>
           </div>
 
           <div class="col-sm-4">
-            <h4>07:35</h4>
+            <h4>10:00</h4>
             <h6 class="mb-0 fw-normal">Ven, 18 Oct {{ currentYear }}</h6>
             <p class="mb-0">Yopougon - Côte d'Ivoire</p>
           </div>
@@ -69,7 +69,7 @@
 
         <div class="row g-4">
           <div class="col-sm-4">
-            <h4>04:50</h4>
+            <h4>12:30</h4>
             <h6 class="mb-0 fw-normal">Jeu, 24 Oct {{ currentYear }}</h6>
             <p class="mb-0">Yopougon - Côte d'Ivoire</p>
           </div>
@@ -82,23 +82,23 @@
               <div
                 class="icon-md bg-primary text-white rounded-circle position-absolute top-50 start-50 translate-middle"
               >
-                <i class="fa-solid fa-fw fa-plane rtl-flip"></i>
+                <i class="fa-solid fa-bus rtl-flip"></i>
               </div>
             </div>
           </div>
 
           <div class="col-sm-4">
-            <h4>15:48</h4>
-            <h6 class="mb-0 fw-normal">Sun, 19 Feb {{ currentYear }}</h6>
-            <p class="mb-0">BOM - Terminal 2 Mumbai, India</p>
+            <h4>18:30</h4>
+            <h6 class="mb-0 fw-normal">Jeu, 24 Oct {{ currentYear }}</h6>
+            <p class="mb-0">Bouaké - Côte d'Ivoire</p>
           </div>
         </div>
       </div>
 
       <div class="col-md-3 text-md-end">
-        <h4>{{ currencyType }}18,500</h4>
+        <h4>7200 {{ currencyType }}</h4>
         <a routerLink="/flights/detail" class="btn btn-dark mb-0 mb-sm-2"
-          >Book Now</a
+          >Réserver</a
         >
         <button
           class="btn btn-link text-decoration-underline p-0 mb-0 ms-1"
@@ -106,7 +106,7 @@
           data-bs-toggle="modal"
           data-bs-target="#flightdetail"
         >
-          <i class="bi bi-eye-fill me-1"></i>Flight Details
+          <i class="bi bi-eye-fill me-1"></i>Voir détails
         </button>
       </div>
     </div>
@@ -117,8 +117,7 @@
       <ul
         class="list-inline bg-light d-sm-flex text-center justify-content-sm-between rounded-2 py-2 px-4 mb-0"
       >
-        <li class="list-inline-item text-danger">Only 10 Seat Left</li>
-        <li class="list-inline-item text-success">Refundable</li>
+        <li class="list-inline-item text-danger">4 Places restantes</li>
       </ul>
     </div>
   </div>
