--- a/Booking/src/app/views/auth/sign-in/sign-in.component.html
+++ b/Booking/src/app/views/auth/sign-in/sign-in.component.html
@@ -19,7 +19,7 @@
 
     <form
       [formGroup]="signinForm"
-      (ngSubmit)="onLogin()"
+      (ngSubmit)="submitData()"
       class="mt-4 text-start"
     >
       <div class="mb-3">
