--- a/Booking/src/app/components/top-bar/profile-dropdown/profile-dropdown.component.html
+++ b/Booking/src/app/components/top-bar/profile-dropdown/profile-dropdown.component.html
@@ -32,9 +32,9 @@
         </div>
         <div>
           <a class="h6 mt-2 mt-sm-0" href="javascript:void(0);"
-            >Lori Ferguson</a
+            >Malick Kongo</a
           >
-          <p class="small m-0">example&#64;gmail.com</p>
+          <p class="small m-0">malick&#64;gmail.com</p>
         </div>
       </div>
     </li>
@@ -44,27 +44,27 @@
     </li>
     <li>
       <a class="dropdown-item" href="javascript:void(0);"
-        ><i class="bi bi-bookmark-check fa-fw me-2"></i>My Bookings</a
+        ><i class="bi bi-bookmark-check fa-fw me-2"></i>Mes réservations</a
       >
     </li>
     <li>
       <a class="dropdown-item" href="javascript:void(0);"
-        ><i class="bi bi-heart fa-fw me-2"></i>My Wishlist</a
+        ><i class="bi bi-heart fa-fw me-2"></i>Mes favoris</a
       >
     </li>
     <li>
       <a class="dropdown-item" href="javascript:void(0);"
-        ><i class="bi bi-gear fa-fw me-2"></i>Settings</a
+        ><i class="bi bi-gear fa-fw me-2"></i>Parametres</a
       >
     </li>
     <li>
       <a class="dropdown-item" href="javascript:void(0);"
-        ><i class="bi bi-info-circle fa-fw me-2"></i>Help Center</a
+        ><i class="bi bi-info-circle fa-fw me-2"></i>Assistance</a
       >
     </li>
     <li>
       <a class="dropdown-item bg-danger-soft-hover" routerLink="/auth/sign-in"
-        ><i class="bi bi-power fa-fw me-2"></i>Sign Out</a
+        ><i class="bi bi-power fa-fw me-2"></i>Se déconnecter</a
       >
     </li>
 
