--- a/Booking/src/app/views/flights/detail/components/flight-details/flight-details.component.html
+++ b/Booking/src/app/views/flights/detail/components/flight-details/flight-details.component.html
@@ -27,15 +27,15 @@
             <div class="col-md-6 col-xl-12">
               <div class="card card-body bg-light">
                 <div class="cardt-title">
-                  <h5>Offer & Discount</h5>
+                  <h5>Offes & Réductions</h5>
                 </div>
 
                 <div class="input-group mt-2">
                   <input
                     class="form-control form-control"
-                    placeholder="Coupon code"
+                    placeholder="Code promo"
                   />
-                  <button type="button" class="btn btn-primary">Apply</button>
+                  <button type="button" class="btn btn-primary">Appliquer</button>
                 </div>
               </div>
             </div>
