--- a/Booking/src/app/views/flights/home/components/hero/hero.component.html
+++ b/Booking/src/app/views/flights/home/components/hero/hero.component.html
@@ -11,11 +11,11 @@
     >
       <div class="row">
         <div class="col-md-10 mx-auto text-center">
-          <h1 class="text-dark display-3 pt-sm-5 my-5">Planifiez vos voyages en un clic ! </h1>
+          <h1 class="text-dark display-3 pt-sm-5 my-5">Voyagez en un clic ! </h1>
         </div>
       </div>
 
-      <form class="bg-mode position-relative px-3 px-sm-4 pt-4 mb-4 mb-sm-0">
+      <form class="bg-mode position-relative px-3 px-sm-4 pt-4 mb-4 mb-sm-0" [formGroup]="searchForm" (ngSubmit)="onSearch()">
         <figure class="position-absolute top-0 start-0 h-100 ms-n2 ms-sm-n1">
           <svg
             class="h-100"
@@ -85,9 +85,11 @@
                             selectFormInput
                             class="form-select js-choice"
                             data-search-enabled="true"
+                            formControlName="start"
                           >
                             <option value="">Lieu de départ</option>
-                            <option>Abobo - Côte d'Ivoire</option>
+                            <option value="abobo">Abobo - Côte d'Ivoire</option>
+                            <option value="abidjan">Abidjan - Côte d'Ivoire</option>
                             <option>Accra - Ghana</option>
                             <option>Adjame - Côte d'Ivoire</option>
                             <option>Aflao - Côte d'Ivoire</option>
@@ -140,6 +142,7 @@
                             selectFormInput
                             class="form-select js-choice"
                             data-search-enabled="true"
+                            formControlName="destination"
                           >
                             <option value="">Lieu de destination</option>
 
@@ -172,7 +175,7 @@
                             <option>Tiebissou - Côte d'Ivoire</option>
                             <option>Toumodi - Côte d'Ivoire</option>
                             <option>Yabayo - Côte d'Ivoire</option>
-                            <option>Yamoussoukro - Côte d'Ivoire</option>
+                            <option value="yamoussoukro">Yamoussoukro - Côte d'Ivoire</option>
                             <option>Yopougon - Côte d'Ivoire</option>
                           </select>
                         </div>
@@ -189,8 +192,9 @@
                             type="text"
                             mwlFlatpickr
                             class="form-control flatpickr"
-                            data-date-format="d M Y"
+                            data-date-format="Y M d"
                             placeholder="Date de départ"
+                            formControlName="date"
                           />
                         </div>
                       </div>
@@ -198,7 +202,8 @@
                       <div class="col-12 text-end pt-0">
                         <a
                           class="btn btn-primary mb-n4"
-                          href="javascript:void(0);"
+                          type="submit"
+                          (click)="onSearch()"
                           >Rechercher <i class="bi bi-search ps-3"></i
                         ></a>
                       </div>
