--- a/Booking/src/app/views/flights/home/components/top-nav/top-nav.component.html
+++ b/Booking/src/app/views/flights/home/components/top-nav/top-nav.component.html
@@ -43,7 +43,11 @@
         />
 
 
-        <li class="nav-item ms-2 d-none d-sm-block">
+        <li class="nav-item ms-2 d-none d-sm-block"
+
+
+        >
+
           <a href="javascript:void(0)" class="btn btn-sm btn-primary-soft mb-0"
              routerLink="/auth/sign-in">
             <i class="fa-solid fa-right-to-bracket me-1"></i>Se connecter</a
