--- a/Booking/src/app/components/top-bar/notification-dropdown/notification-dropdown.component.html
+++ b/Booking/src/app/components/top-bar/notification-dropdown/notification-dropdown.component.html
@@ -23,10 +23,10 @@
         <h6 class="m-0">
           Notifications
           <span class="badge bg-danger bg-opacity-10 text-danger ms-2"
-            >4 new</span
+            >2 Messages</span
           >
         </h6>
-        <a class="small" href="javascript:void(0);">Clear all</a>
+        <a class="small" href="javascript:void(0);">Tout effacer</a>
       </div>
 
       <div class="card-body p-0">
@@ -46,11 +46,7 @@
         </ul>
       </div>
 
-      <div class="card-footer bg-transparent text-center border-top">
-        <a href="javascript:void(0);" class="btn btn-sm btn-link mb-0 p-0"
-          >See all incoming activity</a
-        >
-      </div>
+
     </div>
   </div>
 </li>
