--- a/Booking/src/app/views/flights/home/components/hero/hero.component.html
+++ b/Booking/src/app/views/flights/home/components/hero/hero.component.html
@@ -373,8 +373,8 @@
                       <div class="col-12 text-end pt-0">
                         <a
                           class="btn btn-primary mb-n4"
-                          href="javascript:void(0);"
-
+                          type="submit"
+                          (click)="onSearch()"
                           >Rechercher <i class="bi bi-search ps-3"></i
                         ></a>
                       </div>
